tests/negative/gold/import9_test.gold
tests/negative/import9_test.toit:3:1: error: Failed to find import '.non_existing'
import .non_existing show A
^~~~~~
tests/negative/import9_test.toit:3:9: note: Missing library file. Tried 'tests/negative/non_existing.toit' and 'tests/negative/non_existing/non_existing.toit'
import .non_existing show A
        ^~~~~~~~~~~~
tests/negative/import9_test.toit:10:5: error: Class 'B' does not have any method 'bar'
  b.bar  // Bad.
    ^~~
Compilation failed.
